--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Farmvest" />
+  <meta property="og:title" content="Markwave" />
   <meta property="og:description" content="Markwave Dashboard" />
   <meta property="og:image" content="%PUBLIC_URL%/Markwave_logo.svg" />
 
