--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/Markwave_logo.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/markwave_logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Markwave Dashboard" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/Markwave_logo.svg" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/markwave_logo.svg" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Markwave" />
   <meta property="og:description" content="Markwave Dashboard" />
-  <meta property="og:image" content="%PUBLIC_URL%/Markwave_logo.svg" />
+  <meta property="og:image" content="%PUBLIC_URL%markwave_logo.svg" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
